# order_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 8357cf7b4d54_inbox_outbox_models.py  9c903d83b9c3_orders.py  c7d9d98ea786_orders.py
app/: clients.py  config.py  container.py  database.py  db_inspect.py  dependencies.py  exceptions.py  logger.py  main.py  models.py  repositories.py  schemas.py  services.py
app/api/: orders.py
app/application/: container.py  create_order.py  create_order_use_case.py  dto.py  get_order.py  get_order_use_case.py  payment_callback.py  payment_callback_use_case.py
app/application/use_cases/: create_order_use_case.py  get_order_use_case.py  payment_callback_use_case.py  process_inbox_events_use_case.py  process_outbox_events_use_case.py  send_notification_use_case.py
app/domain/: models.py
app/infrastructure/: container.py  http_catalog_client.py  http_payment_client.py  models.py  repositories.py  uow.py
app/infrastructure/dependencies/: db.py  depends.py
app/infrastructure/http_clients/: http_catalog_client.py  http_notifications_client.py  http_payment_client.py
app/infrastructure/kafka/: kafka_consumer.py  kafka_producer.py
app/presentation/: router_order.py
app/utils/: create_container.py  db_inspect.py  glitchtip.py  logger.py
